--- a/index.html
+++ b/index.html
@@ -1,40 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Battleship</title>
-  <style>
-    .board {
-      display: grid;
-      grid-template-columns: repeat(10, 30px);
-      grid-template-rows: repeat(10, 30px);
-      gap: 2px;
-    }
-    .cell {
-      width: 30px;
-      height: 30px;
-      border: 1px solid #000;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: lightblue;
-    }
-    .miss {
-      background-color: lightgray;
-    }
-    .hit {
-      background-color: red;
-    }
-    .ship {
-      background-color: green;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Js Battleship</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Battleship</h1>
-  <div id="player-board" class="board"></div>
-  <div id="computer-board" class="board"></div>
-  <script type="module" src="./index.js"></script>
+    <div id="game-info">
+        <p>Turn:<span id="turn-display"></span></p>
+        <p>Info:<span id="info"></span></p>
+    </div>
+    <div id="gamesboard-container"></div>
+    <div class="option-container">
+        <div  id="0"  class="destroyer-preview destroyer" draggable="true"></div>
+        <div  id ="1" class="submarine-preview  submarine" draggable="true"></div>
+        <div  id= "2" class="cruiser-preview  cruiser" draggable="true"></div>
+        <div  id="3"class="battleship-preview  battleship" draggable="true"></div>
+        <div  id="4" class="carrier-preview  carrier" draggable="true"></div>
+    </div>
+    <button id="flip-button">FLIP</button>
+    <button id="start-button">START</button>
+    <script src="index.js" defer></script>
+
+    
 </body>
 </html>
